<resources>
    <string name="app_name">Aioter</string>
    <string-array name="devicelist">
        <item>Device1</item>
        <item>Device2</item>
        <item>Device3</item>
        <item>Device4</item>
        <item>Device5</item>
        <item>Device6</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="slide1">Slide 1</string>
    <string name="slide2">Slide 2</string>
    <string name="slide3">Slide 3</string>
    <string name="content_slide1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut rhoncus justo, vel tempor metus. Etiam nunc ex, lacinia non elit at, blandit sodales neque. Donec sed leo ac massa semper mattis id nec enim. Aliquam cursus magna a elit elementum. Vestibulum elit libero, placerat at fermentum ultricies, molestie a magna. Vestibulum egestas augue urna, in accumsan arcu tristique eget. Donec quis sodales massa, ac porta sapien. Nulla porta libero vitae sapien tincidunt volutpat nec laoreet urna.
\n\n
Nam at erat ut orci hendrerit volutpat. Vivamus vel justo lacinia, scelerisque elit ut, consequat neque. Aenean vehicula, ante eu dignissim interdum, risus lacus rutrum lacus, sed tempor metus enim sit amet mauris. Proin fringilla mollis enim, quis aliquam lacus auctor vitae. Sed sit amet ex ultricies, fringilla turpis vitae, mollis est. Nulla mattis tincidunt urna ut finibus. Curabitur finibus laoreet odio vitae luctus. Sed a facilisis mi. Mauris vitae elit nisi. Aliquam erat volutpat. Nam sit amet justo scelerisque, aliquam massa eu, condimentum sem. Phasellus facilisis viverra elementum. Duis consectetur enim et metus accumsan finibus.</string>
    <string name="content_slide2">Lorem ipsum  adipiscing elit. Nam ut rhoncus justo, vel tempor metus. Etiam nunc ex, lacinia non elit at, blandit sodales neque. Donec sed leo ac massa semper mattis id nec enim. Aliquam cursus magna a elit elementum. Vestibulum elit libero, placerat at fermentum ultricies, molestie a magna. Vestibulum egestas augue urna, in accumsan arcu tristique eget. Donec quis sodales massa, ac porta sapien. Nulla porta libero vitae sapien tincidunt volutpat nec laoreet urna.
\n\n
Nam at erat ut orci hendrerit volutpat. Monsequat neque. Aenean vehicula, ante eu dignissim interdum, risus lacus rutrum lacus, sed tempor metus enim sit amet mauris. Proin fringilla mollis enim, quis aliquam lacus auctor vitae. Sed sit amet ex ultricies, fringilla turpis vitae, mollis est. Nulla mattis tincidunt urna ut finibus. Curabitur finibus laoreet odio vitae luctus. Sed a facilisis mi. Mauris vitae elit nisi. Aliquam erat volutpat. Nam sit amet justo scelerisque, aliquam massa eu, condimentum sem. Phasellus facilisis viverra elementum. Duis consectetur enim et metus accumsan finibus.</string>
    <string name="skip"><u>Skip</u></string>
    <string name="terms_condition">Terms &amp; Conditions</string>

    //logout dialog
    <string name="logout">Logout</string>
    <string name="logout_content">"Are you sure you want to \n logout?"</string>
    <string name="logout_btn1">Yes</string>
    <string name="logout_btn2">No</string>

    //device off dialog
    <string name="deviceoff">Device Off</string>
    <string name="deviceoff_content">Are you sure you want to switch off the device?</string>
    <string name="deviceoff_btn1">Yes</string>
    <string name="deviceoff_btn2">No</string>

    //power off dialog
    <string name="poweroff_header">Power Off</string>
    <string name="poweroff_content">Are you sure you want to off all devices / switches?</string>

    //share dialog
    <string name="share_header">Successfully Shared !</string>
    <string name="share_content">"You have shared (Home name)/(Device name) successfully with (email address) \n till (20/03/2020)."</string>
    <string name="share_button">Okay</string>

    //sharelimit dialog
    <string name="sharelimit_header">Limit is Over !</string>
    <string name="sharelimit_content">"Maximum limit of admin users has been completed, Please remove one \n to add another."</string>
    <string name="sharelimit_button">Okay</string>

    //sharewith dialog
    <string name="sharewith_header">Share Device With</string>
    <string name="sharewith_details">Please enter user details-</string>
    <string name="sharewith_valid">Valid till-</string>
    <string name="sharewith_assign">Assign role-</string>
    <string name="sharewith_assign_data1">Guest role</string>
    <string name="sharewith_assign_data2">User role</string>
    <string name="sharewith_assign_data3">Admin role</string>
    <string name="sharewith_btn1">Cancel</string>
    <string name="sharewith_btn2">Share</string>
    <string name="sharewith_email">Email adress</string>
    <string name="sharewith_date">dd/mm/yyyy</string>

    //shareupdate dialog
    <string name="shareupdate_header">Update the details</string>
    <string name="shareupdate_btn1">Cancel</string>
    <string name="shareupdate_email">hashim@gmail.com</string>
    <string name="shareupdate_date">18/04/2020</string>


    <string name="shareupdate_btn2">Update</string>


    //deleteroom dialog
    <string name="deleteroom_header">Delete Room</string>
    <string name="deleteroom_content">"Are you sure you want to delete (Room name)?"</string>

    //deleteswitch dialog
    <string name="deleteswitch_header">Delete (Switch name)</string>
    <string name="deleteswitch_content">"Are you sure you want to delete this?"</string>

    //deletehome dialog
    <string name="deletehome_header">Delete Home</string>
    <string name="deletehome_content">"Are you sure you want to delete (Home name)?"</string>

    //delete schedule dialog
    <string name="deleteschedule_header">Delete Schedule</string>
    <string name="deleteschedule_content">"Are you sure you want to delete (Schedule name)?"</string>

    //add schedule dialog
    <string name="add_schedule_header">Add Schedule</string>
    <string name="add_schedule_btn1">One Time</string>
    <string name="add_schedule_btn2">Recurrence</string>

    //device item dialog
    <string name="item_device_pin">Device Pin</string>
    <string name="enter_device_pin">Enter Device Pin</string>
    <string name="please_enter_valid">*Please enter a valid device pin.</string>


    //wifisetting dialog
    <string name="wifisetting_header">Wifi Setting</string>
    <string name="wifisetting_content">Please go to your device wifi setting to change it.</string>

    //user_authentication dialog
    <string name="user_header">User Verification</string>
    <string name="user_content">"Please enter your email adress here.We will send you a link \n to set your pin."</string>
    <string name="enter_email">Enter email address</string>
    <string name="pin_proceed">Proceed</string>
    <string name="email_validation">*Please enter a valid email address.</string>

    //change pin dialog
    <string name="change_pin_content">"We recommend you to change your device pin to protect the system"</string>
    <string name="change_pin_hint1">Enter New Device Pin</string>
    <string name="change_pin_hint2">Confirm New Device Pin</string>
    <string name="change_pin_validation1">*Please enter a valid device pin</string>
    <string name="change_pin_validation2">*Please retype a pin</string>
    <string name="later">Later</string>
    <string name="update">Update</string>


    //delete_device dialog
    <string name="deletedevice_header">Delete Device</string>
    <string name="deletedevice_content">"Are you sure you want to delete (Device name)?"</string>

    //restore device dialog
    <string name="restoredevice_header">Restore Device</string>
    <string name="restoredevice_content">"Are you sure you want to restore (Device name)?"</string>

    //device pin success dialog
    <string name="success_changed_pin_header">Device pin changed successfully</string>
    <string name="success_changed_pin_content">"Please remember your pin and we suggest to store it at a safe place"</string>

    //pin_authentication dialog
    <string name="pin_header">Pin Authentication</string>
    <string name="pin_content">"Please enter your device pin to change the settings of your device."</string>
    <string name="forgot_pin"><u>Forgot Pin?</u></string>
    <string name="device_pin">Enter device pin</string>
    <string name="pin_validation">*Please enter a valid device pin.</string>

    //pin_success later dialog
    <string name="pin_success_later_header">"Define the text for consequences withe compromise of security \n for device"</string>
    //add home dialog
    <string name="add_home_header">Create Home</string>
    <string name="add_home_et1">Name yout home</string>
    <string name="add_home_et2">Home location</string>
    <string name="add_home_tv1">*Please provide a input</string>
    <string name="add_home_tv2">*Please provide a input</string>
    <string name="Continue">Continue</string>

    //myprofile activity
    <string name="myprofile">My Profile</string>
    <string name="email">Deepa@gmail.com</string>
    <string name="manage">Manage People</string>
    <string name="save_btn">Save</string>


    <string-array name="myprofile_name">
        <item>Raj</item>
        <item>Rohit</item>
        <item>Rahul</item>

    </string-array>
    <string name="title_activity_create_home">Map</string>


</resources>
