<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@color/dialog_bg"
        android:layout_marginTop="@dimen/_4sdp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dialog_header"
            android:fontFamily="@font/bauhausregular"
            android:gravity="center"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/user_header"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/bauhausregular"
            android:gravity="center"
            android:text="@string/user_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            />
        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/curveedittext_bg"

            android:layout_gravity="center"
            android:padding="@dimen/_12sdp"
            android:hint="@string/enter_email"
            android:fontFamily="@font/bauhausregular"
            android:textSize="@dimen/_15ssp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            />
        <TextView
            android:id="@+id/tv_user"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bauhausregular"
            android:paddingLeft="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/email_validation"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/selected"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"

            >
            <Button
                android:id="@+id/btn_user_cancel"
                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/dialog_header"
                android:text="@string/sharewith_btn1"
                android:layout_gravity="center"
                android:fontFamily="@font/baumans"

                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="@dimen/_50sdp"

                />
            <Button
                android:id="@+id/btn_user_proceed"

                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/dialog_header"
                android:text="@string/pin_proceed"
                android:layout_gravity="end"

                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/bauhausregular"
                android:textStyle="bold"


                />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_gravity="right|top"
        android:layout_margin="@dimen/_8sdp"
        android:src="@drawable/invalid_name" />
</FrameLayout>