<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_gravity="center"
    >
    <FrameLayout
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/dialog_bg"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dialog_header"
                android:fontFamily="@font/bauhausregular"
                android:gravity="center"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/sharewith_header"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/bauhausregular"
                android:padding="@dimen/_12sdp"
                android:text="@string/sharewith_details"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_sharewith_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/curveedittext_bg"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/bauhausregular"
                android:hint="@string/sharewith_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:textSize="@dimen/_15ssp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:fontFamily="@font/bauhausregular"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/_12sdp"
                android:text="@string/sharewith_assign"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"

                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"


                >

                <RadioButton
                    android:id="@+id/radiobtn_guest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bauhausregular"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/sharewith_assign_data1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15ssp" />

                <RadioButton
                    android:id="@+id/radiobtn_user"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bauhausregular"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/sharewith_assign_data2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15ssp" />

                <RadioButton
                    android:id="@+id/radiobtn_admin"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bauhausregular"
                    android:paddingLeft="@dimen/_5sdp"
                    android:text="@string/sharewith_assign_data3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15ssp"

                    />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/bauhausregular"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_12sdp"
                    android:text="@string/sharewith_valid"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/curveedittext_bg"
                    android:elevation="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_sharewith_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/bauhausregular"
                        android:gravity="center"
                        android:hint="@string/sharewith_date"
                        android:textSize="@dimen/_15ssp"
                        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

                    <ImageView
                        android:id="@+id/iv_sharewith_calendar"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_weight="1"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/calendar" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:orientation="horizontal"

                >

                <Button
                    android:id="@+id/btn_sharewith_cancel"
                    android:layout_width="@dimen/_95sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_50sdp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/baumans"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/sharewith_btn1"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"

                    />

                <Button
                    android:id="@+id/btn_sharewith_share"
                    android:layout_width="@dimen/_95sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="end"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/baumans"

                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/sharewith_btn2"
                    android:textAllCaps="false"
                    android:textColor="@color/colorActiveDot1"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"


                    />
            </LinearLayout>


        </LinearLayout>

        <ImageView
        android:id="@+id/share_with_close"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_gravity="right|top"
        android:layout_margin="@dimen/_6sdp"
        android:src="@drawable/invalid_name" />
    </FrameLayout>
</FrameLayout>