<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:layout_width="@dimen/_290sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@color/dialog_bg"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dialog_header"
            android:fontFamily="@font/bauhausregular"
            android:gravity="center"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/pin_header"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/bauhausregular"
            android:paddingRight="@dimen/_12sdp"
            android:paddingLeft="@dimen/_12sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/pin_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            />
        <EditText
            android:id="@+id/et_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curveedittext_bg"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_gravity="center"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="10"
            android:padding="@dimen/_12sdp"
            android:hint="@string/device_pin"
            android:fontFamily="@font/bauhausregular"
            android:textSize="@dimen/_15ssp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"



            >
        <TextView
            android:id="@+id/tv_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bauhausregular"
            android:text="@string/pin_validation"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/selected"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/_5sdp"
            android:visibility="invisible"
          />
            <TextView
                android:id="@+id/forgot_pinauthentication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pin"
                android:textColor="@color/selected"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:gravity="center"

                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"

            >
            <Button
                android:id="@+id/btn_pinauthentication_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/sharewith_btn1"
                android:layout_gravity="center"
                android:fontFamily="@font/baumans"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="@dimen/_50sdp"

                />
            <Button
                android:id="@+id/btn_pinauthentication_ok"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/share_button"
                android:layout_gravity="end"
                 android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorActiveDot1"
                android:padding="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/bauhausregular"
                android:textStyle="bold"


                 />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/pin_authentication_close"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_gravity="right|top"
        android:layout_margin="@dimen/_6sdp"
        android:src="@drawable/invalid_name" />
    </FrameLayout>
</FrameLayout>
</layout>