<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_gravity="center">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@color/dialog_bg"
        android:layout_marginTop="@dimen/_4sdp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dialog_header"
            android:fontFamily="@font/bauhausregular"
            android:gravity="center"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/deleteroom_header"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/bauhausregular"
            android:gravity="center"
            android:text="@string/deleteroom_content"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"

            >
            <Button
                android:id="@+id/btn_deleteroom_yes"
                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_bg"
                android:text="@string/logout_btn1"
                android:layout_gravity="center"
                android:fontFamily="@font/baumans"

                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="@dimen/_50sdp"

                />
            <Button
                android:id="@+id/btn_deleteroom_no"

                android:layout_width="@dimen/_95sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_bg"
                android:text="@string/logout_btn2"
                android:layout_gravity="end"

                android:gravity="center"
                android:textColor="@color/colorActiveDot1"
                android:padding="@dimen/_5sdp"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/bauhausregular"
                android:textStyle="bold"


                />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/delete_room_close"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_gravity="right|top"
        android:layout_margin="@dimen/_6sdp"
        android:src="@drawable/invalid_name" />
    </FrameLayout>

</FrameLayout>